--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "1.0.0",
   "scripts": {
+    "start": "parcel index.html",
     "dev": "parcel index.html",
     "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +13,8 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
+    "lucide-react": "^0.540.0",
+    "motion": "^12.23.12",
     "parcel": "^2.15.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
